--- a/sdk/search/search-documents/package.json
+++ b/sdk/search/search-documents/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@azure/search-documents",
-  "version": "12.1.0-beta.2",
+  "version": "12.2.0-beta.1",
   "description": "Azure client library to use Cognitive Search for node.js and browser.",
   "sdk-type": "client",
   "main": "dist/index.js",
@@ -81,7 +81,7 @@
   "engines": {
     "node": ">=18.0.0"
   },
-  "homepage": "https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/search/search-documents/",
+  "homepage": "https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/search/search-documents",
   "sideEffects": false,
   "dependencies": {
     "@azure/core-auth": "^1.3.0",
@@ -130,7 +130,8 @@
     "sinon": "^17.0.0",
     "ts-node": "^10.0.0",
     "typescript": "~5.3.3",
-    "util": "^0.12.1"
+    "util": "^0.12.1",
+    "type-plus": "^7.6.2"
   },
   "//sampleConfiguration": {
     "productName": "Azure Search Documents",
