[web pub sub] update protobuf to ESM

--- a/sdk/web-pubsub/web-pubsub-client-protobuf/tsconfig.json
+++ b/sdk/web-pubsub/web-pubsub-client-protobuf/tsconfig.json
@@ -6,14 +6,9 @@
     "skipLibCheck": true,
     "rootDir": ".",
     "importHelpers": true,
-    "lib": [
-      "DOM",
-      "ES2017"
-    ],
+    "lib": ["DOM", "ES2017"],
     "paths": {
-      "@azure/web-pubsub-client-protobuf": [
-        "./src/index.ts"
-      ]
+      "@azure/web-pubsub-client-protobuf": ["./src/index.ts"]
     }
   },
   "include": [
