--- a/sdk/core/core-client/package.json
+++ b/sdk/core/core-client/package.json
@@ -55,7 +55,7 @@
     "build:test": "echo skipped. actual commands inlined in browser test scripts",
     "build": "npm run clean && tshy && dev-tool run extract-api",
     "check-format": "dev-tool run vendored prettier --list-different --config ../../../.prettierrc.json --ignore-path ../../../.prettierignore \"src/**/*.{ts,cts,mts}\" \"test/**/*.{ts,cts,mts}\" \"*.{js,cjs,mjs,json}\"",
-    "clean": "rimraf --glob dist temp types *.tgz *.log",
+    "clean": "rimraf --glob dist* temp types *.tgz *.log",
     "execute:samples": "echo skipped",
     "extract-api": "tshy && dev-tool run extract-api",
     "format": "dev-tool run vendored prettier --write --config ../../../.prettierrc.json --ignore-path ../../../.prettierignore \"src/**/*.{ts,cts,mts}\" \"test/**/*.{ts,cts,mts}\" \"*.{js,cjs,mjs,json}\"",
