--- a/sdk/web-pubsub/web-pubsub-client-protobuf/package.json
+++ b/sdk/web-pubsub/web-pubsub-client-protobuf/package.json
@@ -13,16 +13,16 @@
   "types": "./dist/commonjs/index.d.ts",
   "scripts": {
     "audit": "node ../../../common/scripts/rush-audit.js && rimraf node_modules package-lock.json && npm i --package-lock-only 2>&1 && npm audit",
-    "build:browser": "npm run build-protobuf && tshy && npm run copy-files && rollup -c",
-    "build:node": "npm run build-protobuf && tshy && npm run copy-files && rollup -c",
+    "build:browser": "npm run build-protobuf && tshy && npm run copy-files",
+    "build:node": "npm run build-protobuf && tshy && npm run copy-files",
     "build:samples": "dev-tool samples publish -f",
-    "build:test": "npm run build-protobuf && tshy && npm run copy-files && rollup -c",
-    "build": "npm run clean && npm run build-protobuf && tshy && npm run copy-files && rollup -c && dev-tool run extract-api",
+    "build:test": "npm run build-protobuf && tshy && npm run copy-files",
+    "build": "npm run clean && npm run build-protobuf && tshy && npm run copy-files && dev-tool run extract-api",
     "copy-files": "npm run copy-files:cjs && npm run copy-files:esm",
-    "copy-files:cjs": "copyfiles -f ./src/generated/clientProto.cjs ./dist/commonjs/generated/ && copyfiles -f ./src/generated/clientProto.d.cts ./dist/commonjs/generated/ && move-file ./dist/commonjs/generated/clientProto.cjs ./dist/commonjs/generated/clientProto.js && move-file ./dist/commonjs/generated/clientProto.d.cts ./dist/commonjs/generated/clientProto.d.ts",
-    "copy-files:esm": "copyfiles -f ./src/generated/clientProto.js ./dist/esm/generated/ && copyfiles -f ./src/generated/clientProto.d.ts ./dist/esm/generated/",
+    "copy-files:cjs": "cpy --flat --rename=clientProto.js ./src/generated/clientProto.cjs ./dist/commonjs/generated/ && cpy --flat ./src/generated/clientProto.d.ts ./dist/esm/generated/",
+    "copy-files:esm": "cpy --flat ./src/generated/clientProto.js ./dist/esm/generated/ && cpy --flat ./src/generated/clientProto.d.ts ./dist/esm/generated/",
     "build-protobuf": "npm run build-protobuf:cjs && npm run build-protobuf:esm",
-    "build-protobuf:cjs": "pbjs -t static-module -w commonjs -o ./src/generated/clientProto.js ./src/protos/client.proto && pbts -o ./src/generated/clientProto.d.ts ./src/generated/clientProto.js && move-file ./src/generated/clientProto.js ./src/generated/clientProto.cjs && move-file ./src/generated/clientProto.d.ts ./src/generated/clientProto.d.cts",
+    "build-protobuf:cjs": "pbjs -t static-module -w commonjs -o ./src/generated/clientProto.js ./src/protos/client.proto && pbts -o ./src/generated/clientProto.d.ts ./src/generated/clientProto.js && move-file ./src/generated/clientProto.js ./src/generated/clientProto.cjs",
     "build-protobuf:esm": "pbjs -t static-module -w es6 -o ./src/generated/clientProto.js ./src/protos/client.proto && pbts -o ./src/generated/clientProto.d.ts ./src/generated/clientProto.js",
     "check-format": "dev-tool run vendored prettier --list-different --config ../../../.prettierrc.json --ignore-path ../../../.prettierignore \"src/**/*.ts\" \"test/**/*.ts\" \"samples-dev/**/*.ts\" \"*.{js,json}\"",
     "format": "dev-tool run vendored prettier --write --config ../../../.prettierrc.json --ignore-path ../../../.prettierignore \"src/**/*.ts\" \"test/**/*.ts\" \"samples-dev/**/*.ts\" \"*.{js,json}\"",
@@ -79,13 +79,12 @@
     "@microsoft/api-extractor": "^7.47.7",
     "@types/node": "^18.0.0",
     "@vitest/coverage-istanbul": "^2.0.5",
-    "copyfiles": "2.4.1",
+    "cpy-cli": "^5.0.0",
     "dotenv": "^16.0.0",
     "eslint": "^9.9.0",
     "move-file-cli": "^3.0.0",
     "rimraf": "^5.0.5",
     "protobufjs-cli": "^1.1.3",
-    "rollup": "^4.0.0",
     "tshy": "^2.0.0",
     "typescript": "~5.5.3",
     "vitest": "^2.0.5"
