--- a/sdk/core/core-amqp/package.json
+++ b/sdk/core/core-amqp/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@azure/core-amqp",
   "sdk-type": "client",
-  "version": "4.4.0-beta.2",
+  "version": "4.4.0",
   "description": "Common library for amqp based azure sdks like @azure/event-hubs.",
   "author": "Microsoft Corporation",
   "license": "MIT",
@@ -23,6 +23,24 @@
       "require": {
         "types": "./dist/commonjs/index.d.ts",
         "default": "./dist/commonjs/index.js"
+      }
+    },
+    "./experimental": {
+      "browser": {
+        "types": "./dist/browser/experimental/index.d.ts",
+        "default": "./dist/browser/experimental/index.js"
+      },
+      "react-native": {
+        "types": "./dist/react-native/experimental/index.d.ts",
+        "default": "./dist/react-native/experimental/index.js"
+      },
+      "import": {
+        "types": "./dist/esm/experimental/index.d.ts",
+        "default": "./dist/esm/experimental/index.js"
+      },
+      "require": {
+        "types": "./dist/commonjs/experimental/index.d.ts",
+        "default": "./dist/commonjs/experimental/index.js"
       }
     }
   },
@@ -111,7 +129,8 @@
   "tshy": {
     "exports": {
       "./package.json": "./package.json",
-      ".": "./src/index.ts"
+      ".": "./src/index.ts",
+      "./experimental": "./src/experimental/index.ts"
     },
     "dialects": [
       "esm",
