--- a/sdk/eventhub/event-hubs/package.json
+++ b/sdk/eventhub/event-hubs/package.json
@@ -102,7 +102,7 @@
   },
   "dependencies": {
     "@azure/abort-controller": "^2.1.2",
-    "@azure/core-amqp": "4.4.0-beta.1",
+    "@azure/core-amqp": "^4.4.0",
     "@azure/core-auth": "^1.3.0",
     "@azure/core-tracing": "^1.1.2",
     "@azure/core-util": "^1.9.1",
