--- a/eng/pipelines/templates/stages/archetype-js-release.yml
+++ b/eng/pipelines/templates/stages/archetype-js-release.yml
@@ -13,7 +13,7 @@ parameters:
 stages:
   - ${{if and(in(variables['Build.Reason'], 'Manual', ''), eq(variables['System.TeamProject'], 'internal'))}}:
       - ${{ each artifact in parameters.Artifacts }}:
-          - stage: 
+          - stage:
             variables:
               - template: /eng/pipelines/templates/variables/globals.yml
             displayName: 'Release: ${{artifact.name}}'
@@ -98,6 +98,8 @@ stages:
                                 Artifact: ${{artifact}}
                                 Registry: ${{parameters.Registry}}
                                 PathToArtifacts: $(Pipeline.Workspace)/${{parameters.ArtifactName}}/${{artifact.name}}
+                                Tag: "$(Tag)"
+                                AdditionalTag: "$(AdditionalTag)"
                             - pwsh: >
                                 write-host "$(Package.Archive)"
 
@@ -254,7 +256,8 @@ stages:
                       Artifact: ${{artifact}}
                       Registry: ${{parameters.Registry}}
                       PathToArtifacts: $(Pipeline.Workspace)/${{parameters.ArtifactName}}/${{artifact.name}}
-                    
+                      Tag: "dev"
+
       - job: PublishDocsToNightlyBranch
         condition: or(eq(variables['SetDevVersion'], 'true'), and(eq(variables['Build.Reason'],'Schedule'), eq(variables['System.TeamProject'], 'internal'),  ne(variables['Skip.PublishDocs'], 'true')))
         dependsOn: PublishPackages
