--- a/eng/pipelines/templates/jobs/live.tests.yml
+++ b/eng/pipelines/templates/jobs/live.tests.yml
@@ -275,6 +275,8 @@ jobs:
           displayName: "Execute Samples"
           env:
             TEST_MODE: "live"
+            AZURE_CLIENT_ID: "fake-client-id"
+            AZURE_LOG_LEVEL: "verbose"
             SYSTEM_ACCESSTOKEN: $(System.AccessToken)
             ${{ insert }}: ${{ parameters.EnvVars }}
           condition: and(succeeded(),eq(variables['TestType'],'sample'))
@@ -307,6 +309,8 @@ jobs:
           displayName: "Execute Samples"
           workingDirectory: $(PackagePath)
           env:
+            AZURE_CLIENT_ID: "fake-client-id"
+            AZURE_LOG_LEVEL: "verbose"
             TEST_MODE: "live"
             ${{ insert }}: ${{ parameters.EnvVars }}
           condition: and(succeeded(),eq(variables['TestType'],'sample'))
