--- a/sdk/notificationhubs/notification-hubs/package.json
+++ b/sdk/notificationhubs/notification-hubs/package.json
@@ -74,6 +74,7 @@
     "playwright": "^1.43.0",
     "rimraf": "^5.0.5",
     "tshy": "^2.0.0",
+    "tsx": "^4.19.1",
     "typescript": "~5.5.3",
     "vitest": "^2.0.5"
   },
