--- a/sdk/ai/ai-inference-rest/package.json
+++ b/sdk/ai/ai-inference-rest/package.json
@@ -83,7 +83,8 @@
     "@azure/core-lro": "^2.6.0",
     "@azure/core-rest-pipeline": "^1.14.0",
     "@azure/logger": "^1.0.0",
-    "tslib": "^2.6.2"
+    "tslib": "^2.6.2",
+    "@azure/core-tracing": "^1.1.3"
   },
   "devDependencies": {
     "@azure-tools/test-credential": "^2.0.0",
@@ -105,7 +106,8 @@
     "source-map-support": "^0.5.9",
     "tshy": "^2.0.0",
     "typescript": "~5.5.3",
-    "vitest": "^2.0.5"
+    "vitest": "^2.0.5",
+    "@opentelemetry/api": "^1.9.0"
   },
   "scripts": {
     "audit": "node ../../../common/scripts/rush-audit.js && rimraf node_modules package-lock.json && npm i --package-lock-only 2>&1 && npm audit",
