--- a/sdk/ai/ai-inference-rest/samples/v1-beta/typescript/package.json
+++ b/sdk/ai/ai-inference-rest/samples/v1-beta/typescript/package.json
@@ -31,13 +31,21 @@
   "homepage": "https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/ai/ai-inference-rest",
   "dependencies": {
     "@azure-rest/ai-inference": "next",
-    "dotenv": "latest",
-    "@azure/identity": "^4.3.0",
-    "@azure/core-sse": "^2.1.3"
+    "@azure/core-tracing": "^1.1.2",
+    "@azure/monitor-opentelemetry-exporter": "^1.0.0-beta.25",
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.49.2",
+    "@opentelemetry/instrumentation": "^0.52.1",
+    "@opentelemetry/resources": "^1.26.0",
+    "@opentelemetry/sdk-node": "^0.53.0",
+    "@opentelemetry/sdk-trace-base": "^1.26.0",
+    "@opentelemetry/sdk-trace-node": "^1.25.1",
+    "@opentelemetry/semantic-conventions": "^1.27.0",
+    "dotenv": "latest"
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
-    "typescript": "~5.5.3",
-    "rimraf": "latest"
+    "rimraf": "latest",
+    "typescript": "~5.5.3"
   }
 }
