--- a/sdk/schemaregistry/schema-registry/package.json
+++ b/sdk/schemaregistry/schema-registry/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@azure/schema-registry",
-  "version": "1.3.0",
+  "version": "1.4.0-beta.1",
   "description": "Schema Registry Library with typescript type definitions for node.js and browser.",
   "sdk-type": "client",
   "main": "dist/index.js",
