--- a/sdk/schemaregistry/schema-registry-avro/package.json
+++ b/sdk/schemaregistry/schema-registry-avro/package.json
@@ -77,17 +77,19 @@
     "@azure-tools/test-credential": "^2.0.0",
     "@azure-tools/test-recorder": "^4.1.0",
     "@azure-tools/test-utils-vitest": "^1.0.0",
+    "@azure-tools/vite-plugin-browser-test-map": "^1.0.0",
     "@azure/core-rest-pipeline": "^1.12.1",
     "@azure/dev-tool": "^1.0.0",
     "@azure/eslint-plugin-azure-sdk": "^3.0.0",
     "@azure/event-hubs": "^5.8.0",
     "@azure/identity": "^4.0.1",
     "@microsoft/api-extractor": "^7.31.1",
+    "@rollup/plugin-inject": "^5.0.5",
     "@types/node": "^18.0.0",
     "@types/uuid": "^8.3.0",
     "@vitest/browser": "^2.1.1",
     "@vitest/coverage-istanbul": "^2.1.1",
-    "buffer": "^6.0.0",
+    "buffer": "^6.0.3",
     "cross-env": "^7.0.2",
     "dotenv": "^16.0.0",
     "eslint": "^9.9.0",
