--- a/sdk/openai/openai-assistants/package.json
+++ b/sdk/openai/openai-assistants/package.json
@@ -78,7 +78,7 @@
     "test:browser": "npm run clean && npm run build && npm run integration-test:browser",
     "test:node": "npm run clean && tsc -p . && npm run integration-test:node",
     "test": "npm run clean && tsc -p . && npm run unit-test:node && dev-tool run bundle && npm run unit-test:browser && npm run integration-test",
-    "unit-test:browser": "dev-tool run test:browser -- karma.conf.cjs",
+    "unit-test:browser": "echo skipped",
     "unit-test:node": "dev-tool run test:node-ts-input",
     "unit-test": "npm run unit-test:node && npm run unit-test:browser"
   },
