--- a/sdk/schemaregistry/schema-registry-avro/package.json
+++ b/sdk/schemaregistry/schema-registry-avro/package.json
@@ -21,7 +21,7 @@
     "extract-api": "tsc -p . && dev-tool run extract-api",
     "format": "dev-tool run vendored prettier --write --config ../../../.prettierrc.json --ignore-path ../../../.prettierignore \"src/**/*.ts\" \"test/**/*.ts\" \"samples-dev/**/*.ts\" \"*.{js,json}\"",
     "integration-test:browser": "npm run build:test && dev-tool run test:vitest --browser --no-test-proxy",
-    "integration-test:node": "dev-tool run test:vitest --no-test-proxy --timeout 5000000",
+    "integration-test:node": "dev-tool run test:vitest --no-test-proxy",
     "integration-test": "npm run integration-test:node && npm run integration-test:browser",
     "lint:fix": "eslint package.json api-extractor.json README.md src test --fix --fix-type [problem,suggestion]",
     "lint": "eslint package.json api-extractor.json README.md src test",
