--- a/sdk/keyvault/keyvault-common/package.json
+++ b/sdk/keyvault/keyvault-common/package.json
@@ -58,6 +58,7 @@
     "@azure/core-tracing": "^1.0.0",
     "@azure/core-auth": "^1.3.0",
     "@azure/abort-controller": "^2.0.0",
+    "@azure/logger": "^1.1.5",
     "tslib": "^2.2.0"
   },
   "devDependencies": {
