--- a/sdk/identity/identity-broker/package.json
+++ b/sdk/identity/identity-broker/package.json
@@ -69,6 +69,7 @@
     "@azure-tools/test-utils": "^1.0.1",
     "@azure/abort-controller": "^1.1.0",
     "@azure/core-client": "^1.7.0",
+    "@azure/core-rest-pipeline": "^1.17.0",
     "@azure/core-util": "^1.6.0",
     "@azure/dev-tool": "^1.0.0",
     "@azure/eslint-plugin-azure-sdk": "^3.0.0",
