--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1035,7 +1035,7 @@ sdk/ai/ai-inference-rest @glharper @dargilco @jhakulin
 #/<NotInRepo>/          @antcp @AzureAppServiceCLI
 
 # ServiceLabel: %App Configuration %Service Attention
-#/<NotInRepo>/          @Eskibear @avanigupta
+#/<NotInRepo>/          @zhiyuanliang-ms @avanigupta
 
 # ServiceLabel: %ARO %Service Attention
 #/<NotInRepo>/          @mjudeikis @jim-minter @julienstroheker @amanohar
