--- a/sdk/template/template/tsconfig.browser.config.json
+++ b/sdk/template/template/tsconfig.browser.config.json
@@ -1,14 +1,7 @@
 {
   "extends": "./.tshy/build.json",
-  "include": [
-    "./src/**/*.ts",
-    "./src/**/*.mts",
-    "./test/**/*.spec.ts"
-  ],
-  "exclude": [
-    "./test/**/node/**/*.ts",
-    "./test/snippets.spec.ts"
-  ],
+  "include": ["./src/**/*.ts", "./src/**/*.mts", "./test/**/*.spec.ts"],
+  "exclude": ["./test/**/node/**/*.ts", "./test/snippets.spec.ts"],
   "compilerOptions": {
     "outDir": "./dist-test/browser",
     "rootDir": ".",
