--- a/sdk/openai/openai/package.json
+++ b/sdk/openai/openai/package.json
@@ -106,6 +106,7 @@
     "@azure-tools/test-credential": "^2.0.0",
     "@azure-tools/test-recorder": "^4.1.0",
     "@azure-tools/test-utils-vitest": "^1.0.0",
+    "@azure-tools/vite-plugin-browser-test-map": "^1.0.0",
     "@azure/arm-cognitiveservices": "^7.5.0",
     "@azure/core-rest-pipeline": "^1.16.2",
     "@azure/logger": "^1.1.3",
@@ -115,6 +116,7 @@
     "@azure/identity": "^4.2.0",
     "@microsoft/api-extractor": "^7.31.1",
     "@types/node": "^18.0.0",
+    "@rollup/plugin-inject": "^5.0.5",
     "@vitest/browser": "^2.0.4",
     "@vitest/coverage-istanbul": "^2.0.4",
     "cross-env": "^7.0.3",
