--- a/sdk/core/core-tracing/package.json
+++ b/sdk/core/core-tracing/package.json
@@ -73,9 +73,7 @@
     "unit-test": "npm run unit-test:node && npm run unit-test:browser"
   },
   "dependencies": {
-    "tslib": "^2.6.2",
-    "@azure/logger": "^1.1.5",
-    "@azure/core-util": "^1.9.3"
+    "tslib": "^2.6.2"
   },
   "devDependencies": {
     "@azure/core-auth": "^1.3.0",
