--- a/sdk/mongocluster/arm-mongocluster/tsconfig.json
+++ b/sdk/mongocluster/arm-mongocluster/tsconfig.json
@@ -4,10 +4,8 @@
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
     "rootDir": ".",
-    "paths": {
-      "@azure/arm-mongocluster": ["./src/index"]
-    },
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "paths": { "@azure/arm-mongocluster": ["./src/index"] }
   },
   "include": [
     "./src/**/*.ts",
