--- a/sdk/communication/communication-email/package.json
+++ b/sdk/communication/communication-email/package.json
@@ -48,6 +48,7 @@
   ],
   "dependencies": {
     "@azure/communication-common": "^2.2.0",
+    "@azure/communication-email": "file:",
     "@azure/core-auth": "^1.3.0",
     "@azure/core-client": "^1.3.2",
     "@azure/core-lro": "^2.5.0",
@@ -84,7 +85,7 @@
     "nyc": "^17.0.0",
     "rimraf": "^5.0.5",
     "ts-node": "^10.0.0",
-    "typescript": "~5.5.3"
+    "typescript": "~5.6.2"
   },
   "homepage": "https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/communication/communication-email/",
   "bugs": {
