--- a/sdk/notificationhubs/notification-hubs/package.json
+++ b/sdk/notificationhubs/notification-hubs/package.json
@@ -25,7 +25,7 @@
     "clean": "rimraf --glob dist dist-* temp types *.tgz *.log",
     "execute:samples": "tsx",
     "extract-api": "tshy && dev-tool run extract-api",
-    "extract-snippets": "tshy && dev-tool run update-snippets",
+    "update-snippets": "tshy && dev-tool run update-snippets",
     "format": "dev-tool run vendored prettier --write --config ../../../.prettierrc.json --ignore-path ../../../.prettierignore \"src/**/*.ts\" \"test/**/*.ts\" \"samples-dev/**/*.ts\" \"*.{js,json}\"",
     "integration-test:browser": "npm run build:test && dev-tool run test:vitest --browser -- -c vitest.browser.int.config.ts",
     "integration-test:node": "dev-tool run test:vitest -- -c vitest.int.config.ts",
@@ -76,7 +76,7 @@
     "rimraf": "^5.0.5",
     "tshy": "^2.0.0",
     "tsx": "^4.19.1",
-    "typescript": "~5.6.2",
+    "typescript": "~5.5.3",
     "vitest": "^2.0.5"
   },
   "dependencies": {
