[EngSys] fix formatting
This is the result of `rush format`, correcting several formatting issues
introduced in the last NO_CI commit.

--- a/sdk/search/search-documents/tsconfig.json
+++ b/sdk/search/search-documents/tsconfig.json
@@ -6,7 +6,7 @@
     "paths": {
       "@azure/search-documents": ["./src/index"]
     },
-    "skipLibCheck": true,
+    "skipLibCheck": true
   },
   "include": ["samples-dev/**/*.ts", "src/**/*.ts", "test/**/*.ts"]
 }
