--- a/sdk/apimanagement/api-management-custom-widgets-scaffolder/tsconfig.json
+++ b/sdk/apimanagement/api-management-custom-widgets-scaffolder/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
-    "skipLibCheck": true,
+    "skipLibCheck": true
   },
   "exclude": ["./src/templates/**"],
   "include": [
