update browser config

--- a/sdk/openai/openai/tsconfig.json
+++ b/sdk/openai/openai/tsconfig.json
@@ -6,7 +6,8 @@
     },
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
-    "rootDir": "."
+    "rootDir": ".",
+    "lib": ["dom"],
   },
   "exclude": ["./samples/**/*.ts"],
   "include": [
