--- a/sdk/openai/openai/tsconfig.browser.config.json
+++ b/sdk/openai/openai/tsconfig.browser.config.json
@@ -1,6 +1,6 @@
 {
   "extends": "./.tshy/build.json",
-  "include": ["./src/**/*.ts", "./src/**/*.mts", "./test/**/*.spec.ts"],
+  "include": ["./src/**/*.ts", "./src/**/*.mts", "./test/**/*.spec.ts", "./test/**/*.mts"],
   "exclude": ["./test/**/node/**/*.ts"],
   "compilerOptions": {
     "outDir": "./dist-test/browser",
