update images assertion

--- a/sdk/openai/openai/tsconfig.json
+++ b/sdk/openai/openai/tsconfig.json
@@ -7,7 +7,7 @@
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
     "rootDir": ".",
-    "lib": ["dom"],
+    "lib": ["dom"]
   },
   "exclude": ["./samples/**/*.ts"],
   "include": [
