--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1553,6 +1553,8 @@ sdk/ai/ai-inference-rest @glharper @dargilco @jhakulin
 /.github/workflows/    @Azure/azure-sdk-eng
 /eng/ignore-links.txt  @Azure/azure-sdk-eng @Azure/azure-sdk-js-dev
 
+/.config/1espt/ @benbp @weshaggard
+
 ###########
 # Config
 ###########
