--- a/sdk/schemaregistry/schema-registry-avro/tsconfig.browser.config.json
+++ b/sdk/schemaregistry/schema-registry-avro/tsconfig.browser.config.json
@@ -1,6 +1,6 @@
 {
   "extends": "./.tshy/build.json",
-  "include": ["./src/**/*.ts", "./src/**/*.mts", "./test/**/*.ts"],
+  "include": ["./src/**/*.ts", "./src/**/*.mts", "./test/**/*.ts", "./test/**/*.mts"],
   "exclude": ["./test/**/node/**/*.ts", "./test/stress*"],
   "compilerOptions": {
     "outDir": "./dist-test/browser",
