--- a/sdk/identity/identity-broker/samples/v2/javascript/package.json
+++ b/sdk/identity/identity-broker/samples/v2/javascript/package.json
@@ -26,10 +26,14 @@
     "start": "electron index.js"
   },
   "dependencies": {
-    "@azure/identity-broker": "^1.0.0",
+    "@azure/identity-broker": "./azure-identity-broker-1.1.0-beta.1.tgz",
     "dotenv": "latest",
-    "@azure/identity": "4.5.0-beta.3",
+    "@azure/identity": "./azure-identity-4.5.0-beta.3",
     "electron": "^27.0.0",
-    "@azure/logger": "^1.0.4"
+    "@azure/logger": "^1.0.4",
+    "@azure/abort-controller": "2.1.2",
+    "@azure/core-client": "1.9.2",
+    "@azure/core-auth": "1.8.0",
+    "@azure/core-rest-pipeline": "1.17.0"
   }
 }
