--- a/sdk/batch/batch/package.json
+++ b/sdk/batch/batch/package.json
@@ -23,6 +23,7 @@
   "types": "./types/src/index.d.ts",
   "devDependencies": {
     "@rollup/plugin-commonjs": "^28.0.0",
+    "@rollup/plugin-node-resolve": "^15.3.0",
     "@types/chai": "^4.2.21",
     "@types/chai-as-promised": "^8.0.0",
     "@types/mocha": "^10.0.0",
@@ -51,8 +52,7 @@
     "puppeteer": "^23.4.0",
     "rimraf": "^6.0.1",
     "rollup": "^4.0.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-sourcemaps": "^0.4.2",
+    "rollup-plugin-sourcemaps": "^0.6.3",
     "source-map-support": "^0.5.19",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
