[core] Add README snippets for core

--- a/sdk/core/abort-controller/tsconfig.json
+++ b/sdk/core/abort-controller/tsconfig.json
@@ -8,13 +8,5 @@
     "moduleResolution": "NodeNext",
     "rootDir": "."
   },
-  "include": [
-    "./src/**/*.ts",
-    "./src/**/*.mts",
-    "./src/**/*.cts",
-    "./test/**/*.ts",
-    "src/**/*.ts",
-    "test/**/*.ts",
-    "samples-dev/**/*.ts"
-  ]
+  "include": ["src/**/*.ts", "src/**/*.mts", "src/**/*.cts", "test/**/*.ts", "samples-dev/**/*.ts"]
 }
