[batch] upgrade dependency versions to address security alerts (#31199)
This old project is not managed by rush so we have to upgrade
dependencies separately.

--- a/sdk/batch/batch/package.json
+++ b/sdk/batch/batch/package.json
@@ -7,7 +7,7 @@
     "@azure/ms-rest-azure-js": "^2.1.0",
     "@azure/ms-rest-js": "^2.2.0",
     "jssha": "^3.2.0",
-    "tslib": "^1.10.0",
+    "tslib": "^2.7.0",
     "url-parse": "^1.5.3"
   },
   "keywords": [
@@ -22,17 +22,18 @@
   "module": "./dist-esm/index.js",
   "types": "./types/src/index.d.ts",
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^11.0.2",
+    "@rollup/plugin-commonjs": "^28.0.0",
+    "@rollup/plugin-node-resolve": "^15.3.0",
     "@types/chai": "^4.2.21",
-    "@types/chai-as-promised": "^7.1.4",
+    "@types/chai-as-promised": "^8.0.0",
     "@types/mocha": "^10.0.0",
     "@types/node": "^18.0.0",
     "@types/url-parse": "^1.4.3",
-    "@types/uuid": "^8.3.1",
+    "@types/uuid": "^10.0.0",
     "buffer": "^6.0.0",
     "nyc": "^17.0.0",
-    "chai": "^4.3.4",
-    "chai-as-promised": "^7.1.1",
+    "chai": "^5.1.1",
+    "chai-as-promised": "^8.0.0",
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.0",
     "eslint": "^9.9.0",
@@ -48,17 +49,16 @@
     "karma-mocha-reporter": "^2.2.5",
     "mocha": "^10.0.0",
     "moment": "^2.29.1",
-    "puppeteer": "^10.1.0",
-    "rimraf": "^5.0.0",
-    "rollup": "^1.16.3",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-sourcemaps": "^0.4.2",
+    "puppeteer": "^23.4.0",
+    "rimraf": "^6.0.1",
+    "rollup": "^4.0.0",
+    "rollup-plugin-sourcemaps": "^0.6.3",
     "source-map-support": "^0.5.19",
     "ts-node": "^10.9.2",
-    "ts-node-dev": "^1.1.8",
+    "ts-node-dev": "^2.0.0",
     "typescript": "~5.6.2",
     "uglify-js": "^3.6.0",
-    "uuid": "^8.3.2"
+    "uuid": "^10.0.0"
   },
   "homepage": "https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/batch/batch",
   "repository": {
