--- a/sdk/maps/maps-render-rest/tsconfig.json
+++ b/sdk/maps/maps-render-rest/tsconfig.json
@@ -4,18 +4,9 @@
     "outDir": "./dist-esm",
     "declarationDir": "./types",
     "paths": {
-      "@azure-rest/maps-render": [
-        "./src/index"
-      ]
+      "@azure-rest/maps-render": ["./src/index"]
     },
-    "lib": [
-      "DOM"
-    ]
+    "lib": ["DOM"]
   },
-  "include": [
-    "src/**/*.ts",
-    "./test/**/*.ts",
-    "./samples-dev/**/*.ts",
-    "generated/logger.ts"
-  ]
+  "include": ["src/**/*.ts", "./test/**/*.ts", "./samples-dev/**/*.ts"]
 }
