--- a/sdk/ai/ai-inference-rest/package.json
+++ b/sdk/ai/ai-inference-rest/package.json
@@ -104,7 +104,6 @@
     "playwright": "^1.41.2",
     "rimraf": "^5.0.5",
     "source-map-support": "^0.5.9",
-    "tshy": "^2.0.0",
     "typescript": "~5.6.2",
     "vitest": "^2.0.5",
     "@opentelemetry/api": "^1.9.0",
@@ -130,10 +129,10 @@
     "unit-test:browser": "npm run clean && dev-tool run build-test && dev-tool run test:vitest --browser --hookTimeout=50000",
     "unit-test:node": "dev-tool run test:vitest --hookTimeout=50000",
     "unit-test": "npm run unit-test:node && npm run unit-test:browser",
-    "build:test": "npm run clean && tshy && dev-tool run build-test",
-    "build": "npm run clean && tshy && mkdirp ./review && dev-tool run extract-api",
-    "test:node": "npm run clean && tshy && npm run unit-test:node && npm run integration-test:node",
-    "test": "npm run clean && tshy && npm run unit-test:node && dev-tool run bundle && npm run unit-test:browser && npm run integration-test"
+    "build:test": "npm run clean && dev-tool run build-package && dev-tool run build-test",
+    "build": "npm run clean && dev-tool run build-package && mkdirp ./review && dev-tool run extract-api",
+    "test:node": "npm run clean && dev-tool run build-package && npm run unit-test:node && npm run integration-test:node",
+    "test": "npm run clean && dev-tool run build-package && npm run unit-test:node && dev-tool run bundle && npm run unit-test:browser && npm run integration-test"
   },
   "//sampleConfiguration": {
     "productName": "Azure AI Inference",
