--- a/sdk/apimanagement/api-management-custom-widgets-scaffolder/package.json
+++ b/sdk/apimanagement/api-management-custom-widgets-scaffolder/package.json
@@ -35,7 +35,7 @@
     "bundle:bin": "rollup -c rollup.config.bin.mjs 2>&1",
     "build:test": "echo skip",
     "build:samples": "echo skipped",
-    "build": "npm run clean && tshy && npm run bundle:bin && dev-tool run extract-api",
+    "build": "npm run clean && dev-tool run build-package && npm run bundle:bin && dev-tool run extract-api",
     "check-format": "dev-tool run vendored prettier --list-different --config ../../../.prettierrc.json --ignore-path ../../../.prettierignore --ignore-path ./.prettierignore \"src/**/*.ts\" \"test/**/*.ts\" \"*.{js,json}\"",
     "clean": "rimraf --glob dist dist-* types *.tgz *.log",
     "extract-api": "tsc -p . && dev-tool run extract-api",
@@ -47,8 +47,8 @@
     "lint": "eslint package.json api-extractor.json src test --ignore-pattern templates",
     "pack": "npm pack 2>&1",
     "test:browser": "npm run clean && npm run build:test && npm run unit-test:browser && npm run integration-test:browser",
-    "test:node": "npm run clean && tshy && npm run unit-test:node && npm run integration-test:node",
-    "test": "npm run clean && tshy && npm run unit-test:node && dev-tool run build-test && npm run unit-test:browser && npm run integration-test",
+    "test:node": "npm run clean && dev-tool run build-package && npm run unit-test:node && npm run integration-test:node",
+    "test": "npm run clean && dev-tool run build-package && npm run unit-test:node && dev-tool run build-test && npm run unit-test:browser && npm run integration-test",
     "unit-test:browser": "echo skipped",
     "unit-test:node": "dev-tool run test:vitest --no-test-proxy",
     "unit-test": "npm run unit-test:node && npm run unit-test:browser"
@@ -68,7 +68,6 @@
     "prettier": "^3.3.3",
     "rimraf": "^5.0.5",
     "rollup": "^4.14.0",
-    "tshy": "^2.0.0",
     "typescript": "~5.6.2",
     "vitest": "^2.0.5"
   },
