--- a/sdk/batch/batch-rest/package.json
+++ b/sdk/batch/batch-rest/package.json
@@ -77,7 +77,6 @@
     "rimraf": "^5.0.5",
     "mkdirp": "^2.1.2",
     "typescript": "~5.6.2",
-    "tshy": "^2.0.0",
     "@azure/core-util": "^1.0.0",
     "@azure-tools/test-credential": "^1.0.0",
     "@azure/identity": "^4.0.1",
@@ -108,10 +107,10 @@
     "lint:fix": "eslint package.json api-extractor.json src test --fix --fix-type [problem,suggestion]",
     "lint": "eslint package.json api-extractor.json src test",
     "minify": "uglifyjs -c -m --comments --source-map \"content='./dist/index.js.map'\" -o ./dist/index.min.js ./dist/index.js",
-    "build:test": "npm run clean && tshy && dev-tool run build-test",
-    "build": "npm run clean && tshy && mkdirp ./review && api-extractor run --local",
-    "test:node": "npm run clean && tshy && npm run unit-test:node && npm run integration-test:node",
-    "test": "npm run clean && tshy && npm run unit-test:node && dev-tool run bundle && npm run unit-test:browser",
+    "build:test": "npm run clean && dev-tool run build-package && dev-tool run build-test",
+    "build": "npm run clean && dev-tool run build-package && mkdirp ./review && api-extractor run --local",
+    "test:node": "npm run clean && dev-tool run build-package && npm run unit-test:node && npm run integration-test:node",
+    "test": "npm run clean && dev-tool run build-package && npm run unit-test:node && dev-tool run bundle && npm run unit-test:browser",
     "unit-test:browser": "npm run build:test && dev-tool run test:vitest --browser",
     "unit-test:node": "dev-tool run test:vitest"
   },
