--- a/sdk/devcenter/developer-devcenter-rest/package.json
+++ b/sdk/devcenter/developer-devcenter-rest/package.json
@@ -72,7 +72,6 @@
     "rimraf": "^5.0.5",
     "mkdirp": "^3.0.1",
     "typescript": "~5.6.2",
-    "tshy": "^2.0.0",
     "@azure/core-util": "^1.0.0",
     "@azure-tools/test-credential": "^2.0.0",
     "@azure/identity": "^4.0.1",
@@ -104,10 +103,10 @@
     "generate:client": "echo skipped",
     "test:browser": "npm run clean && npm run build:test && npm run unit-test:browser && npm run integration-test:browser",
     "minify": "uglifyjs -c -m --comments --source-map \"content='./dist/index.js.map'\" -o ./dist/index.min.js ./dist/index.js",
-    "build:test": "npm run clean && tshy && dev-tool run build-test",
-    "build": "npm run clean && tshy && mkdirp ./review && dev-tool run extract-api",
-    "test:node": "npm run clean && tshy && npm run unit-test:node && npm run integration-test:node",
-    "test": "npm run clean && tshy && npm run unit-test:node && dev-tool run bundle && npm run unit-test:browser && npm run integration-test"
+    "build:test": "npm run clean && dev-tool run build-package && dev-tool run build-test",
+    "build": "npm run clean && dev-tool run build-package && mkdirp ./review && dev-tool run extract-api",
+    "test:node": "npm run clean && dev-tool run build-package && npm run unit-test:node && npm run integration-test:node",
+    "test": "npm run clean && dev-tool run build-package && npm run unit-test:node && dev-tool run bundle && npm run unit-test:browser && npm run integration-test"
   },
   "exports": {
     "./package.json": "./package.json",
