--- a/sdk/eventhub/mock-hub/package.json
+++ b/sdk/eventhub/mock-hub/package.json
@@ -15,7 +15,7 @@
   "sideEffects": false,
   "scripts": {
     "audit": "node ../../../common/scripts/rush-audit.js && rimraf node_modules package-lock.json && npm i --package-lock-only 2>&1 && npm audit",
-    "build": "npm run clean && tshy && dev-tool run extract-api",
+    "build": "npm run clean && dev-tool run build-package && dev-tool run extract-api",
     "build:samples": "echo Obsolete.",
     "build:test": "echo skipped",
     "check-format": "dev-tool run vendored prettier --list-different --config ../../../.prettierrc.json --ignore-path ../../../.prettierignore \"src/**/*.{ts,cts,mts}\" \"test/**/*.{ts,cts,mts}\" \"*.{js,cjs,mjs,json}\"",
@@ -70,7 +70,6 @@
     "eslint": "^9.9.0",
     "playwright": "^1.45.3",
     "rimraf": "^6.0.1",
-    "tshy": "^2.0.0",
     "typescript": "~5.6.2",
     "vitest": "^2.0.5"
   },
