--- a/sdk/healthdataaiservices/azure-health-deidentification/package.json
+++ b/sdk/healthdataaiservices/azure-health-deidentification/package.json
@@ -84,7 +84,6 @@
     "rimraf": "^5.0.5",
     "mkdirp": "^3.0.1",
     "typescript": "~5.6.2",
-    "tshy": "^2.0.0",
     "@azure/core-util": "^1.9.0",
     "@azure-tools/test-credential": "^2.1.0",
     "@azure-tools/test-recorder": "^4.1.0",
@@ -97,25 +96,25 @@
   },
   "scripts": {
     "audit": "node ../../../common/scripts/rush-audit.js && rimraf node_modules package-lock.json && npm i --package-lock-only 2>&1 && npm audit",
-    "build:node": "tshy",
+    "build:node": "dev-tool run build-package",
     "build:samples": "echo Obsolete.",
     "build:test": "echo skipped. actual commands inlined in browser test scripts",
-    "build": "npm run clean && tshy && dev-tool run extract-api",
+    "build": "npm run clean && dev-tool run build-package && dev-tool run extract-api",
     "check-format": "dev-tool run vendored prettier --list-different --config ../../../.prettierrc.json --ignore-path ../../../.prettierignore \"src/**/*.ts\" \"test/**/*.ts\" \"*.{js,json}\" \"samples-dev/**/*.ts\"",
     "clean": "rimraf --glob dist dist-browser dist-esm test-dist temp types *.tgz *.log",
     "execute:samples": "dev-tool samples run samples-dev",
-    "extract-api": "tshy && dev-tool run extract-api",
+    "extract-api": "dev-tool run build-package && dev-tool run extract-api",
     "format": "dev-tool run vendored prettier --write --config ../../../.prettierrc.json --ignore-path ../../../.prettierignore \"src/**/*.ts\" \"test/**/*.ts\" \"*.{js,json}\" \"samples-dev/**/*.ts\"",
     "generate:client": "autorest --typescript ./swagger/README.md",
-    "integration-test:browser": "tshy && dev-tool run build-test && dev-tool run test:vitest --browser",
-    "integration-test:node": "tshy && dev-tool run build-test && dev-tool run test:vitest",
+    "integration-test:browser": "dev-tool run build-package && dev-tool run build-test && dev-tool run test:vitest --browser",
+    "integration-test:node": "dev-tool run build-package && dev-tool run build-test && dev-tool run test:vitest",
     "integration-test": "npm run integration-test:node && npm run integration-test:browser",
     "lint": "eslint package.json api-extractor.json src test",
     "lint:fix": "eslint package.json api-extractor.json src test --fix --fix-type [problem,suggestion]",
     "pack": "npm pack 2>&1",
     "test:browser": "npm run clean && npm run build:test && npm run unit-test:browser",
-    "test:node": "npm run clean && tshy && npm run unit-test:node",
-    "test": "npm run clean && tshy && npm run unit-test:node && dev-tool run bundle && npm run unit-test:browser",
+    "test:node": "npm run clean && dev-tool run build-package && npm run unit-test:node",
+    "test": "npm run clean && dev-tool run build-package && npm run unit-test:node && dev-tool run bundle && npm run unit-test:browser",
     "unit-test:browser": "npm run integration-test:browser",
     "unit-test:node": "npm run integration-test:node",
     "unit-test": "npm run unit-test:node && npm run unit-test:browser"
