--- a/sdk/keyvault/keyvault-common/package.json
+++ b/sdk/keyvault/keyvault-common/package.json
@@ -12,12 +12,12 @@
   "scripts": {
     "audit": "node ../../../common/scripts/rush-audit.js && rimraf node_modules package-lock.json && npm i --package-lock-only 2>&1 && npm audit",
     "build:samples": "echo skipped",
-    "build:test": "npm run clean && tshy",
-    "build": "npm run clean && tshy && dev-tool run extract-api",
+    "build:test": "npm run clean && dev-tool run build-package",
+    "build": "npm run clean && dev-tool run build-package && dev-tool run extract-api",
     "check-format": "dev-tool run vendored prettier --list-different --config ../../../.prettierrc.json --ignore-path ../../../.prettierignore \"src/**/*.ts\" \"test/**/*.ts\" \"*.{js,json}\"",
     "clean": "rimraf --glob dist dist-* temp types *.tgz *.log",
     "execute:samples": "dev-tool samples run samples-dev",
-    "extract-api": "tshy && dev-tool run extract-api",
+    "extract-api": "dev-tool run build-package && dev-tool run extract-api",
     "format": "dev-tool run vendored prettier --write --config ../../../.prettierrc.json --ignore-path ../../../.prettierignore \"src/**/*.ts\" \"test/**/*.ts\" \"*.{js,json}\"",
     "integration-test:browser": "echo skipped",
     "integration-test:node": "echo skipped",
@@ -72,7 +72,6 @@
     "eslint": "^9.9.0",
     "playwright": "^1.46.0",
     "rimraf": "^5.0.5",
-    "tshy": "^3.0.2",
     "typescript": "~5.6.2",
     "vitest": "^2.0.5"
   },
