--- a/sdk/web-pubsub/web-pubsub-client-protobuf/package.json
+++ b/sdk/web-pubsub/web-pubsub-client-protobuf/package.json
@@ -13,11 +13,11 @@
   "types": "./dist/commonjs/index.d.ts",
   "scripts": {
     "audit": "node ../../../common/scripts/rush-audit.js && rimraf node_modules package-lock.json && npm i --package-lock-only 2>&1 && npm audit",
-    "build:browser": "npm run build-protobuf && tshy && npm run copy-files",
-    "build:node": "npm run build-protobuf && tshy && npm run copy-files",
+    "build:browser": "npm run build-protobuf && dev-tool run build-package && npm run copy-files",
+    "build:node": "npm run build-protobuf && dev-tool run build-package && npm run copy-files",
     "build:samples": "dev-tool samples publish -f",
-    "build:test": "npm run build-protobuf && tshy && npm run copy-files",
-    "build": "npm run clean && npm run build-protobuf && tshy && npm run copy-files && dev-tool run extract-api",
+    "build:test": "npm run build-protobuf && dev-tool run build-package && npm run copy-files",
+    "build": "npm run clean && npm run build-protobuf && dev-tool run build-package && npm run copy-files && dev-tool run extract-api",
     "copy-files": "npm run copy-files:cjs && npm run copy-files:esm",
     "copy-files:cjs": "cpy --flat --rename=clientProto.js ./src/generated/clientProto.cjs ./dist/commonjs/generated/ && cpy --flat ./src/generated/clientProto.d.ts ./dist/esm/generated/",
     "copy-files:esm": "cpy --flat ./src/generated/clientProto.js ./dist/esm/generated/ && cpy --flat ./src/generated/clientProto.d.ts ./dist/esm/generated/",
@@ -28,7 +28,7 @@
     "format": "dev-tool run vendored prettier --write --config ../../../.prettierrc.json --ignore-path ../../../.prettierignore \"src/**/*.ts\" \"test/**/*.ts\" \"samples-dev/**/*.ts\" \"*.{js,json}\"",
     "clean": "rimraf --glob dist dist-esm test-dist temp types *.tgz *.log",
     "execute:samples": "dev-tool samples run samples-dev",
-    "extract-api": "tshy && dev-tool run extract-api",
+    "extract-api": "dev-tool run build-package && dev-tool run extract-api",
     "integration-test:browser": "echo skipped",
     "integration-test:node": "echo skipped",
     "integration-test": "npm run integration-test:node && npm run integration-test:browser",
@@ -85,7 +85,6 @@
     "move-file-cli": "^3.0.0",
     "rimraf": "^5.0.5",
     "protobufjs-cli": "^1.1.3",
-    "tshy": "^2.0.0",
     "typescript": "~5.6.2",
     "vitest": "^2.0.5"
   },
