skip dependency testing, add process for browser

--- a/sdk/schemaregistry/schema-registry-avro/tests.yml
+++ b/sdk/schemaregistry/schema-registry-avro/tests.yml
@@ -5,3 +5,6 @@ extends:
     parameters:
       PackageName: "@azure/schema-registry-avro"
       ServiceDirectory: schemaregistry
+      MatrixFilters:
+        - TestType=^(?!sample).*
+        - DependencyVersion=^$
