--- a/sdk/schemaregistry/schema-registry-avro/package.json
+++ b/sdk/schemaregistry/schema-registry-avro/package.json
@@ -9,11 +9,11 @@
   "types": "./dist/commonjs/index.d.ts",
   "scripts": {
     "audit": "node ../../../common/scripts/rush-audit.js && rimraf node_modules package-lock.json && npm i --package-lock-only 2>&1 && npm audit",
-    "build": "npm run clean && tshy && dev-tool run extract-api",
+    "build": "npm run clean && dev-tool run build-package && dev-tool run extract-api",
     "build:browser": "npm run bundle",
     "build:node": "npm run bundle",
     "build:samples": "echo Obsolete.",
-    "build:test": "tshy & dev-tool run build-test",
+    "build:test": "dev-tool run build-package & dev-tool run build-test",
     "check-format": "dev-tool run vendored prettier --list-different --config ../../../.prettierrc.json --ignore-path ../../../.prettierignore \"src/**/*.ts\" \"test/**/*.ts\" \"samples-dev/**/*.ts\" \"*.{js,json}\"",
     "clean": "rimraf --glob dist dist-* temp \"types/!(schema-registry-avro.shims.d.ts)\" *.tgz *.log",
     "execute:samples": "dev-tool samples run samples-dev",
@@ -97,7 +97,6 @@
     "process": "^0.11.10",
     "rimraf": "^5.0.5",
     "stream": "^0.0.3",
-    "tshy": "^3.0.2",
     "ts-node": "^10.0.0",
     "typescript": "~5.6.2",
     "uuid": "^8.3.0",
