--- a/sdk/schemaregistry/schema-registry-avro/tsconfig.browser.config.json
+++ b/sdk/schemaregistry/schema-registry-avro/tsconfig.browser.config.json
@@ -5,6 +5,7 @@
   "compilerOptions": {
     "outDir": "./dist-test/browser",
     "rootDir": ".",
+    "lib": ["dom"],
     "skipLibCheck": true
   }
 }
