skiplibcheck for lru cache

--- a/sdk/schemaregistry/schema-registry-avro/tsconfig.json
+++ b/sdk/schemaregistry/schema-registry-avro/tsconfig.json
@@ -4,6 +4,7 @@
     "paths": {
       "@azure/schema-registry-avro": ["./src/index.js"]
     },
+    "skipLibCheck": true,
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
     "rootDir": "."
