[instrumentation] Move to ESM/vitest (#31286)
### Packages impacted by this PR

- @azure/opentelemetry-instrumentation-azure-sdk

### Issues associated with this PR


### Describe the problem that is addressed by this PR

Migrates the package to ESM and vitest. Note one issue with mocking with
the propagator object.

### What are the possible designs available to address the problem? If
there are more than one possible design, why was the one in this PR
chosen?


### Are there test cases added in this PR? _(If not, why?)_


### Provide a list of related PRs _(if any)_


### Command used to generate this PR:**_(Applicable only to SDK release
request PRs)_

### Checklists
- [ ] Added impacted package name to the issue description
- [ ] Does this PR needs any fixes in the SDK Generator?** _(If so,
create an Issue in the
[Autorest/typescript](https://github.com/Azure/autorest.typescript)
repository and link it here)_
- [ ] Added a changelog (if necessary)

---------

Co-authored-by: Maor Leger <maorleger@users.noreply.github.com>

--- a/sdk/instrumentation/opentelemetry-instrumentation-azure-sdk/tsconfig.json
+++ b/sdk/instrumentation/opentelemetry-instrumentation-azure-sdk/tsconfig.json
@@ -1,11 +1,20 @@
 {
   "extends": "../../../tsconfig",
   "compilerOptions": {
-    "outDir": "./dist-esm",
-    "declarationDir": "./types",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "rootDir": ".",
     "paths": {
       "@azure/opentelemetry-instrumentation-azure-sdk": ["./src/index"]
     }
   },
-  "include": ["src/**/*.ts", "test/**/*.ts", "samples-dev/**/*.ts"]
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.cts",
+    "src/**/*.mts",
+    "test/**/*.ts",
+    "test/**/*.cts",
+    "test/**/*.mts",
+    "samples-dev/**/*.ts"
+  ]
 }
